--- a/readthedocs.yaml
+++ b/readthedocs.yaml
@@ -1,5 +1,10 @@
 version: 1
 
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "3.11"
+
 python:
   install:
     - requirements: docs/requirements.txt
